--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </footer>
     </div>
     <!-- <script src="./js/defaultList.js"></script> -->
-    <script src="./js/firebase.js" type="module"></script>
+    <!-- <script src="./js/firebase.js" type="module"></script> -->
     <script src="./js/history.js"></script>
     <script src="./js/list.js"></script>
     <script src="./js/design.js"></script>
