--- a/history.html
+++ b/history.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>履歴</title>
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/history.css" />
+    <!-- <link rel="stylesheet" href="./css/history.css" /> -->
   </head>
   <body>
     <div class="sp-main-wrapper">
