選択する項目を増やす

--- a/self.html
+++ b/self.html
@@ -33,7 +33,9 @@
                 <option value="cleaning">掃除</option>
                 <option value="communication">会話</option>
                 <option value="action">行動</option>
-                <option value="shopping">買い物</option></select
+                <option value="shopping">買い物</option>
+                <option value="education">教育</option>
+                <option value="other">その他</option></select
               ><br />
               <label for="item-content">リストアイテム内容</label><br />
               <textarea id="item-content"></textarea>
@@ -61,6 +63,8 @@
               <option value="communication">会話</option>
               <option value="action">行動</option>
               <option value="shopping">買い物</option>
+              <option value="education">教育</option>
+              <option value="other">その他</option>
             </select>
             <br />
             <label for="new-item-content">リストアイテム内容</label><br />
