リスト内容が表示されるようにはなった

--- a/setting.html
+++ b/setting.html
@@ -14,7 +14,7 @@
           <h1>設定</h1>
           <ul class="list">
             <a href="#">
-            <li>パートナーを招待
+            <li>ゲーミフィケーションの変更
             </li>
             </a>
             <a href="#" id="reset-btn">
