優先度の並び替え

--- a/self.html
+++ b/self.html
@@ -37,6 +37,12 @@
                 <option value="education">教育</option>
                 <option value="other">その他</option></select
               ><br />
+              <label for="new-priority-select">優先度の変更</label>
+              <select id="new-priority-select">
+                <option value="high">高</option>
+                <option value="middle">中</option>
+                <option value="low">低</option>
+              </select>
               <label for="item-content">リストアイテム内容</label><br />
               <textarea id="item-content"></textarea>
               <div class="button-flex">
@@ -67,6 +73,12 @@
               <option value="other">その他</option>
             </select>
             <br />
+            <label for="priority-select">優先度</label>
+            <select id="priority-select">
+              <option value="high">高</option>
+              <option value="middle">中</option>
+              <option value="low">低</option>
+            </select>
             <label for="new-item-content">リストアイテム内容</label><br />
             <textarea id="new-item-content"></textarea>
             <div class="button-flex">
